# ty-trial

./: LICENSE  README.md  pyproject.toml
src/: arg_type.py  assignment.py  call_arg.py  operator.py  override.py  return.py  return_value.py
