[project]
name = "ty-trial"
version = "0.1.0"
description = "A trial package for ty"
authors = [
    { name = "So Uchida", email = "s.aiueo32@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ty>=0.0.0a7",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
byte-string-type-annotation = "error"
call-non-callable = "error"
call-possibly-unbound-method = "warn"
conflicting-argument-forms = "error"
conflicting-declarations = "error"
conflicting-metaclass = "error"
cyclic-class-definition = "error"
division-by-zero = "error"
duplicate-base = "error"
escape-character-in-forward-annotation = "error"
fstring-type-annotation = "error"
implicit-concatenated-string-type-annotation = "error"
incompatible-slots = "error"
inconsistent-mro = "error"
index-out-of-bounds = "error"
invalid-argument-type = "error"
invalid-assignment = "error"
invalid-attribute-access = "error"
invalid-base = "error"
invalid-context-manager = "error"
invalid-declaration = "error"
invalid-exception-caught = "error"
invalid-generic-class = "error"
invalid-ignore-comment = "warn"
invalid-legacy-type-variable = "error"
invalid-metaclass = "error"
invalid-overload = "error"
invalid-parameter-default = "error"
invalid-protocol = "error"
invalid-raise = "error"
invalid-return-type = "error"
invalid-super-argument = "error"
invalid-syntax-in-forward-annotation = "error"
invalid-type-checking-constant = "error"
invalid-type-form = "error"
invalid-type-variable-constraints = "error"
missing-argument = "error"
no-matching-overload = "error"
non-subscriptable = "error"
not-iterable = "error"
parameter-already-assigned = "error"
possibly-unbound-attribute = "warn"
possibly-unbound-import = "warn"
possibly-unresolved-reference = "warn"
raw-string-type-annotation = "error"
redundant-cast = "warn"
static-assert-error = "error"
subclass-of-final-class = "error"
too-many-positional-arguments = "error"
type-assertion-failure = "error"
unavailable-implicit-super-arguments = "error"
undefined-reveal = "warn"
unknown-argument = "error"
unknown-rule = "warn"
unresolved-attribute = "error"
unresolved-import = "error"
unresolved-reference = "warn"
unsupported-bool-conversion = "error"
unsupported-operator = "error"
unused-ignore-comment = "warn"
zero-stepsize-in-slice = "error"
